--- a/app/src/main/res/layout/fragment_finnal_page.xml
+++ b/app/src/main/res/layout/fragment_finnal_page.xml
@@ -11,43 +11,46 @@
         android:id="@+id/textView30"
         android:layout_width="wrap_content"
         android:layout_height="43dp"
-        android:paddingLeft="5dp"
-        android:paddingTop="8dp"
-        android:text="Ratio of K for Hollow Shaft :"
-        android:textColor="#FFFFFF"
-        android:textSize="17sp"
-        android:layout_below="@+id/textView20"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
-        android:layout_marginTop="15dp" />
+        android:layout_below="@+id/textView20"
+        android:layout_marginTop="15dp"
+        android:paddingLeft="5dp"
+        android:paddingTop="8dp"
+        android:text="Maximum Shear Stress Theory :"
+        android:textColor="#FFFFFF"
+        android:textSize="17sp"
+        android:layout_toStartOf="@+id/answer1"
+        android:layout_toLeftOf="@+id/answer1" />
 
     <TextView
         android:id="@+id/textView31"
         android:layout_width="wrap_content"
         android:layout_height="43dp"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_below="@+id/textView30"
+        android:layout_marginTop="13dp"
         android:paddingLeft="5dp"
         android:paddingTop="8dp"
-        android:text="Ratio of K for Hollow Shaft :"
+        android:text="Maximum Normal Stress Theory :"
         android:textColor="#FFFFFF"
         android:textSize="17sp"
-        android:layout_marginTop="13dp"
-        android:layout_below="@+id/textView30"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true" />
+        android:layout_toLeftOf="@+id/answer2"
+        android:layout_toStartOf="@+id/answer2" />
 
     <TextView
-        android:id="@+id/textView26"
+        android:id="@+id/textView2"
         android:layout_width="wrap_content"
         android:layout_height="43dp"
-        android:layout_marginTop="11dp"
         android:paddingLeft="5dp"
         android:paddingTop="8dp"
         android:text="Combined Shock factor for Torsion :"
         android:textColor="#FFFFFF"
         android:textSize="17sp"
         android:layout_below="@+id/textView24"
-        android:layout_toLeftOf="@+id/textView25"
-        android:layout_toStartOf="@+id/textView25" />
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true" />
 
     <TextView
         android:id="@+id/textView24"
@@ -60,14 +63,12 @@
         android:textSize="17sp"
         android:layout_below="@+id/textView19"
         android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:layout_marginTop="12dp" />
+        android:layout_alignParentStart="true" />
 
     <TextView
         android:id="@+id/textView19"
         android:layout_width="wrap_content"
         android:layout_height="43dp"
-        android:layout_marginTop="11dp"
         android:paddingLeft="5dp"
         android:paddingTop="8dp"
         android:text="Bending Moment acting on Shaft :"
@@ -76,14 +77,14 @@
         android:layout_below="@+id/textView21"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
-        android:layout_toLeftOf="@+id/textView28"
-        android:layout_toStartOf="@+id/textView28" />
+        android:layout_marginTop="57dp"
+        android:layout_toLeftOf="@+id/shockfactorfortorsion"
+        android:layout_toStartOf="@+id/shockfactorfortorsion" />
 
     <TextView
         android:id="@+id/textView21"
         android:layout_width="wrap_content"
         android:layout_height="43dp"
-        android:layout_marginTop="11dp"
         android:paddingLeft="5dp"
         android:paddingTop="8dp"
         android:text="How Load is Applied :"
@@ -91,7 +92,9 @@
         android:textSize="17sp"
         android:layout_below="@+id/textView7"
         android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true" />
+        android:layout_alignParentStart="true"
+        android:layout_alignRight="@+id/textView19"
+        android:layout_alignEnd="@+id/textView19" />
 
     <TextView
         android:id="@+id/textView7"
@@ -106,8 +109,8 @@
         android:layout_alignBottom="@+id/textView18"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
-        android:layout_toLeftOf="@+id/spinner"
-        android:layout_toStartOf="@+id/spinner" />
+        android:layout_toLeftOf="@+id/loadspinner"
+        android:layout_toStartOf="@+id/loadspinner" />
 
     <TextView
         android:id="@+id/textView18"
@@ -122,11 +125,11 @@
         android:layout_below="@+id/textView29"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
-        android:layout_toLeftOf="@+id/spinner2"
-        android:layout_toStartOf="@+id/spinner2" />
+        android:layout_toStartOf="@+id/shaftbendingmoment"
+        android:layout_toLeftOf="@+id/shaftbendingmoment" />
 
     <Spinner
-        android:id="@+id/spinner"
+        android:id="@+id/loadspinner"
         android:layout_width="match_parent"
         android:layout_height="43dp"
         android:layout_above="@+id/textView19"
@@ -136,7 +139,7 @@
         android:layout_toEndOf="@+id/textView21" />
 
     <Spinner
-        android:id="@+id/spinner2"
+        android:id="@+id/statusspinner"
         android:layout_width="match_parent"
         android:layout_height="43dp"
         android:layout_alignTop="@+id/textView7"
@@ -147,14 +150,14 @@
         android:id="@+id/textView20"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Options and Result : "
+        android:layout_marginTop="14dp"
+        android:text="Diameter of Shaft By : "
         android:textColor="@android:color/holo_red_dark"
         android:textSize="24sp"
         android:textStyle="bold"
-        android:layout_marginTop="12dp"
-        android:layout_below="@+id/textView26"
-        android:layout_alignLeft="@+id/textView29"
-        android:layout_alignStart="@+id/textView29" />
+        android:layout_below="@+id/textView2"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true" />
 
     <TextView
         android:id="@+id/textView29"
@@ -165,19 +168,21 @@
         android:layout_marginTop="15dp"
         android:text="Options and Result : "
         android:textColor="@android:color/holo_red_dark"
-        android:textSize="24sp"
+        android:textSize="30sp"
         android:textStyle="bold" />
 
     <TextView
-        android:id="@+id/textView22"
+        android:id="@+id/shaftbendingmoment"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignBottom="@+id/textView19"
         android:layout_alignParentEnd="true"
         android:layout_alignParentRight="true"
         android:layout_alignTop="@+id/textView19"
+        android:layout_toEndOf="@+id/textView24"
         android:layout_toRightOf="@+id/textView24"
-        android:layout_toEndOf="@+id/textView24" />
+        android:textAlignment="center"
+        android:textSize="24sp" />
 
     <TextView
         android:id="@+id/textView25"
@@ -190,45 +195,81 @@
         android:layout_toRightOf="@+id/textView24" />
 
     <TextView
-        android:id="@+id/textView27"
+        android:id="@+id/combinedshockbending"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignBottom="@+id/textView24"
         android:layout_alignParentEnd="true"
         android:layout_alignParentRight="true"
         android:layout_alignTop="@+id/textView24"
-        android:layout_toRightOf="@+id/textView24" />
+        android:layout_toRightOf="@+id/textView24"
+        android:textAlignment="center"
+        android:textSize="24sp" />
 
     <TextView
-        android:id="@+id/textView28"
+        android:id="@+id/combinedshocktorsion"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignBottom="@+id/textView26"
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentRight="true"
-        android:layout_alignTop="@+id/textView26"
-        android:layout_toRightOf="@+id/textView26" />
+        android:layout_alignBaseline="@+id/textView2"
+        android:layout_alignBottom="@+id/textView2"
+        android:layout_toRightOf="@+id/textView2"
+        android:layout_toEndOf="@+id/textView2" />
 
     <TextView
-        android:id="@+id/textView32"
+        android:id="@+id/shockfactorfortorsion"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignBottom="@+id/textView2"
+        android:layout_below="@+id/textView24"
+        android:layout_toEndOf="@+id/combinedshocktorsion"
+        android:layout_toRightOf="@+id/combinedshocktorsion"
+        android:textAlignment="center"
+        android:textSize="24sp" />
+
+    <TextView
+        android:id="@+id/answer2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignBottom="@+id/textView30"
         android:layout_alignParentEnd="true"
         android:layout_alignParentRight="true"
         android:layout_alignTop="@+id/textView30"
-        android:layout_toEndOf="@+id/textView30"
-        android:layout_toRightOf="@+id/textView30" />
+        android:layout_toEndOf="@+id/textView26"
+        android:layout_toRightOf="@+id/textView26" />
 
     <TextView
-        android:id="@+id/textView33"
+        android:id="@+id/answer1"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_above="@+id/textView31"
+        android:layout_alignTop="@+id/textView30"
+        android:layout_toEndOf="@+id/textView2"
+        android:layout_toRightOf="@+id/textView2"
+        android:textAlignment="center"
+        android:textSize="24sp" />
+
+    <TextView
+        android:id="@+id/answer2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignBottom="@+id/textView31"
         android:layout_alignParentEnd="true"
         android:layout_alignParentRight="true"
         android:layout_alignTop="@+id/textView31"
-        android:layout_toEndOf="@+id/textView30"
-        android:layout_toRightOf="@+id/textView30" />
+        android:layout_toEndOf="@+id/textView24"
+        android:layout_toRightOf="@+id/textView24"
+        android:textAlignment="center"
+        android:textSize="24sp" />
+
+    <Button
+        android:id="@+id/calculate"
+        style="@android:style/Widget.Material.Button.Colored"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/textView21"
+        android:layout_centerHorizontal="true"
+        android:text="Calculate Result"
+        android:textColor="@android:color/holo_orange_light"
+        android:textSize="24sp" />
 
 </RelativeLayout>
