--- a/app/src/main/res/layout/fragment_page2.xml
+++ b/app/src/main/res/layout/fragment_page2.xml
@@ -23,22 +23,22 @@
         android:layout_alignEnd="@+id/textView12" />
 
     <EditText
-        android:id="@+id/editText"
+        android:id="@+id/pulleyweight"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignBottom="@+id/textView13"
         android:layout_alignParentEnd="true"
         android:layout_alignParentRight="true"
         android:layout_toEndOf="@+id/textView15"
+        android:layout_toRightOf="@+id/textView15"
         android:ems="10"
-        android:inputType="textPersonName"
+        android:inputType="numberDecimal"
         android:textAlignment="center"
         android:textColor="#FFFFFF"
-        android:textColorHint="#FFFFFF"
-        android:layout_toRightOf="@+id/textView15" />
+        android:textColorHint="#FFFFFF" />
 
     <EditText
-        android:id="@+id/editText2"
+        android:id="@+id/permissiblestress"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignBottom="@+id/textView14"
@@ -47,71 +47,72 @@
         android:layout_toEndOf="@+id/textView14"
         android:layout_toRightOf="@+id/textView14"
         android:ems="10"
-        android:inputType="textPersonName"
+        android:inputType="numberDecimal"
         android:textAlignment="center"
         android:textColor="#FFFFFF"
         android:textColorHint="#FFFFFF" />
 
     <EditText
-        android:id="@+id/editText4"
+        android:id="@+id/pressureanglegear"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentRight="true"
+        android:layout_alignTop="@+id/textView15"
+        android:layout_toEndOf="@+id/textView15"
+        android:layout_toRightOf="@+id/textView15"
         android:ems="10"
-        android:inputType="textPersonName"
+        android:inputType="numberDecimal"
         android:textAlignment="center"
         android:textColor="#FFFFFF"
-        android:textColorHint="#FFFFFF"
-        android:layout_alignTop="@+id/textView15"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true"
-        android:layout_toRightOf="@+id/textView15"
-        android:layout_toEndOf="@+id/textView15" />
+        android:textColorHint="#FFFFFF" />
 
     <EditText
-        android:id="@+id/editText6"
+        android:id="@+id/tesionratio"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:ems="10"
-        android:inputType="textPersonName"
-        android:textAlignment="center"
-        android:textColor="#FFFFFF"
-        android:textColorHint="#FFFFFF"
         android:layout_alignBaseline="@+id/textView16"
         android:layout_alignBottom="@+id/textView16"
-        android:layout_alignParentRight="true"
         android:layout_alignParentEnd="true"
+        android:layout_alignParentRight="true"
+        android:layout_toEndOf="@+id/textView15"
         android:layout_toRightOf="@+id/textView15"
-        android:layout_toEndOf="@+id/textView15" />
-
-    <EditText
-        android:id="@+id/editText9"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
         android:ems="10"
-        android:inputType="textPersonName"
+        android:inputType="numberDecimal"
         android:textAlignment="center"
         android:textColor="#FFFFFF"
-        android:textColorHint="#FFFFFF"
+        android:textColorHint="#FFFFFF" />
+
+    <EditText
+        android:id="@+id/maxtension"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_alignBottom="@+id/textView17"
-        android:layout_alignParentRight="true"
         android:layout_alignParentEnd="true"
+        android:layout_alignParentRight="true"
+        android:layout_alignTop="@+id/textView17"
+        android:layout_toEndOf="@+id/textView17"
         android:layout_toRightOf="@+id/textView17"
-        android:layout_toEndOf="@+id/textView17" />
-
-    <EditText
-        android:id="@+id/editText11"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
         android:ems="10"
-        android:inputType="textPersonName"
+        android:inputType="numberDecimal"
         android:textAlignment="center"
         android:textColor="#FFFFFF"
-        android:textColorHint="#FFFFFF"
-        android:layout_alignTop="@+id/textView9"
-        android:layout_alignParentRight="true"
+        android:textColorHint="#FFFFFF" />
+
+    <EditText
+        android:id="@+id/ratioForKHollow"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_alignParentEnd="true"
+        android:layout_alignParentRight="true"
+        android:layout_alignTop="@+id/ratiofork"
+        android:layout_toEndOf="@+id/textView16"
         android:layout_toRightOf="@+id/textView16"
-        android:layout_toEndOf="@+id/textView16" />
+        android:ems="10"
+        android:inputType="numberDecimal"
+        android:textAlignment="center"
+        android:textColor="#FFFFFF"
+        android:textColorHint="#FFFFFF" />
 
     <TextView
         android:id="@+id/textView12"
@@ -128,11 +129,11 @@
         android:layout_alignParentTop="true"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
-        android:layout_alignRight="@+id/textView9"
-        android:layout_alignEnd="@+id/textView9" />
+        android:layout_alignRight="@+id/ratiofork"
+        android:layout_alignEnd="@+id/ratiofork" />
 
     <TextView
-        android:id="@+id/textView9"
+        android:id="@+id/ratiofork"
         android:layout_width="wrap_content"
         android:layout_height="43dp"
         android:layout_alignParentLeft="true"
@@ -148,18 +149,18 @@
     <TextView
         android:id="@+id/textView17"
         android:layout_width="wrap_content"
-        android:layout_height="43dp"
+        android:layout_height="wrap_content"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
         android:layout_below="@+id/textView16"
         android:layout_marginTop="21dp"
+        android:layout_toLeftOf="@+id/ratioForKHollow"
+        android:layout_toStartOf="@+id/ratioForKHollow"
         android:paddingLeft="5dp"
         android:paddingTop="8dp"
         android:text="Maximum tension in belt ( Newton) :"
         android:textColor="#FFFFFF"
-        android:textSize="17sp"
-        android:layout_toLeftOf="@+id/editText11"
-        android:layout_toStartOf="@+id/editText11" />
+        android:textSize="17sp" />
 
     <TextView
         android:id="@+id/textView16"
@@ -174,8 +175,8 @@
         android:text="Tention Ratio :"
         android:textColor="#FFFFFF"
         android:textSize="17sp"
-        android:layout_toLeftOf="@+id/editText6"
-        android:layout_toStartOf="@+id/editText6" />
+        android:layout_toLeftOf="@+id/tesionratio"
+        android:layout_toStartOf="@+id/tesionratio" />
 
     <TextView
         android:id="@+id/textView15"
@@ -183,7 +184,7 @@
         android:layout_height="43dp"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
-        android:layout_below="@+id/editText2"
+        android:layout_below="@+id/permissiblestress"
         android:layout_marginTop="17dp"
         android:paddingLeft="5dp"
         android:paddingTop="8dp"
@@ -204,6 +205,6 @@
         android:text="Permissible Stress (mPa ) :"
         android:textColor="#FFFFFF"
         android:textSize="17sp"
-        android:layout_toLeftOf="@+id/editText"
-        android:layout_toStartOf="@+id/editText" />
+        android:layout_toLeftOf="@+id/pulleyweight"
+        android:layout_toStartOf="@+id/pulleyweight" />
 </RelativeLayout>
